external-crates/move/crates/move-compiler/tests/move_check/borrows/copy_full_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/copy_full_invalid.move:13:9
   │
12 │         let f = &mut x;
   │                 ------ It is still being mutably borrowed by this reference
13 │         x;
   │         ^ Invalid copy of variable 'x'

error[E07002]: mutable ownership violated
   ┌─ tests/move_check/borrows/copy_full_invalid.move:19:9
   │
18 │         let f = id_mut(&mut x);
   │                 -------------- It is still being mutably borrowed by this reference
19 │         x;
   │         ^ Invalid copy of variable 'x'
